Update config files from laptop.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,14 +1,24 @@
-# Change escape key from C-b to C-\
+# Change escape key from C-b to C-j
 unbind-key C-b
-set -g prefix 'C-\'
-bind-key 'C-\' send-prefix
+set -g prefix 'C-j'
+bind-key 'C-j' send-prefix
 
-# Set a C-\ shortcut for reloading your tmux config
+# Set a C-j r shortcut for reloading your tmux config
 bind r source-file ~/.tmux.conf
 
 # Set vi key bindings
 set -g status-keys vi
 setw -g mode-keys vi
+
+set -g history-limit 10000
+
+set -g mouse on
+bind -n WheelUpPane   select-pane -t= \; copy-mode -e \; send-keys -M
+bind -n WheelDownPane select-pane -t= \;                 send-keys -M
+
+# set default shell
+set -g default-shell /usr/bin/zsh
+# set -g default-command "reattach-to-user-namespace -l zsh"
 
 # Reload configuration file after changing
 # tmux source-file ~/.tmux.conf
@@ -19,13 +29,13 @@ setw -g mode-keys vi
 # tmux a -t session-name   # Attach session-name
 
 # Session management
-# C-\ ? # Bring up help
-# C-\ $ # rename current session
-# C-\ d # detach tmux session
+# C-j ? # Bring up help
+# C-j $ # rename current session
+# C-j d # detach tmux session
 
 # Windows
-# C-\ c # create new window
-# C-\ , # rename current window
-# C-\ n # go to next window
-# C-\ p # go to previous window
-# C-\ s # list current sessions
+# C-j c # create new window
+# C-j , # rename current window
+# C-j n # go to next window
+# C-j p # go to previous window
+# C-j s # list current sessions
