Ignore flake8 plugin.

--- a/.vim/bundle/.gitignore
+++ b/.vim/bundle/.gitignore
@@ -1,6 +1,7 @@
 SimpylFold
 slimux
 vim-colors-solarized
+vim-flake8
 vim-fugitive
 vim-minizinc
 vim-pathogen
@@ -9,3 +10,4 @@ vim-sensible
 vim-speeddating
 vim-surround
 vim-unimpaired
+
