--- a/.direnvrc
+++ b/.direnvrc
@@ -1,3 +1,5 @@
+# See https://github.com/direnv/direnv/wiki/Python#-pyenv
+
 use_python() {
   local python_root=$HOME/.pyenv/versions/$1
   load_prefix "$python_root"
