Disable direnv on CentOS since it seems to not work.

--- a/.direnvrc
+++ b/.direnvrc
@@ -3,5 +3,9 @@
 use_python() {
   local python_root=$HOME/.pyenv/versions/$1
   load_prefix "$python_root"
-  layout_python "$python_root/bin/python"
+  if [[ -x "$python_root/bin/python3" ]]; then
+    layout python3 "$python_root/bin/python3"
+  else
+    layout python "$python_root/bin/python"
+  fi
 }
