Update repo with laptop.

--- a/etc/Makefile
+++ b/etc/Makefile
@@ -8,6 +8,8 @@
 # $< = file that caused action
 # $* = prefix shared by target and dependent files
 
+TEXTMP = .textmp
+
 # Identify source files
 PY	= $(wildcard *.py) # List all python files in directory
 MKD	= $(wildcard *.mkd)
@@ -28,8 +30,17 @@ stl:	$(STL)
 
 dxf:	$(DXF)
 
+# file.ext.py creates file.ext
+%:      %.py
+	python3 $< > $@
+
 %.dxf:	%.scad
 	openscad -o $@ $<
+
+%.dvi:	%.tex
+	mkdir -p $(TEXTMP)
+	latex -halt-on-error -file-line-error -interaction=nonstopmode -output-directory=$(TEXTMP) $<
+	mv $(TEXTMP)/$@ .
 
 %.pdf:	%.mkd
 	pandoc $< -f markdown --latex-engine pdflatex -o $@
@@ -44,17 +55,32 @@ ifeq ($(grep 'LaTeX Warning: .* may have changed' $*.log),)
 	pdflatex -interaction=nonstopmode $<
 endif
 
+%.png:	%.dot
+	dot -Tpng $< -o $@
+
 %.scad: %.scad.py
 	python3 $< > $@
 
 %.stl:	%.scad
 	openscad -m make -o $@ $<
 
+%.svg:	%.dvi
+	dvisvgm --no-fonts $<
+
+%.svg:	%.dot
+	dot -Tsvg $< -o $@
+
 %.tex:	%.tikz
 	tikz2preview $< > $@
 
 %.tikz:	%.qpic
 	qpic < $< > $@
+
+%.tikz:	%.dot
+	dot2tex --preproc $< | dot2tex --figonly > $@
+
+%.mp3:	%.mkv
+	ffmpeg -i $< -vn -c:a libmp3lame -y $@
 
 clean:
 	/bin/rm -f $(AUTO)
