--- a/.gitconfig
+++ b/.gitconfig
@@ -3,3 +3,6 @@
 	name = Thomas Draper
 [push]
 	default = simple
+[credential "https://github.com"]
+	helper = 
+	helper = !/usr/bin/gh auth git-credential
