--- a/.gitconfig
+++ b/.gitconfig
@@ -3,6 +3,5 @@
 	name = Thomas Draper
 [push]
 	default = simple
-[credential "https://github.com"]
-	helper = 
-	helper = !/usr/bin/gh auth git-credential
+[credential]
+	helper = store
