--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,9 @@
 # Change escape key from C-b to C-j
 unbind-key C-b
 set -g prefix 'C-j'
+set -g prefix2 'C-b'
 bind-key 'C-j' send-prefix
+bind-key 'C-b' send-prefix
 
 # Set a C-j r shortcut for reloading your tmux config
 bind r source-file ~/.tmux.conf
@@ -19,6 +21,10 @@ bind -n WheelDownPane select-pane -t= \;                 send-keys -M
 # set default shell
 set -g default-shell /usr/bin/zsh
 # set -g default-command "reattach-to-user-namespace -l zsh"
+
+set-option -g status-interval 1
+set-option -g automatic-rename on
+set-option -g automatic-rename-format '#{b:pane_current_path}'
 
 # Reload configuration file after changing
 # tmux source-file ~/.tmux.conf
